# fabric_mcp

./: .env.example  .env.template  README.md  SECURITY_ENHANCEMENTS_SUMMARY.md  pyproject.toml  quick_test.py  traffic_signals_map.html
.kiro/specs/fabric-lakehouse-mcp-server/: design.md  requirements.md  tasks.md
config/: development.env  production.env
docs/: configuration.md  deployment.md  setup.md
fabric_lakehouse_mcp/: __init__.py  main.py  server.py
fabric_lakehouse_mcp/auth/: __init__.py  manager.py
fabric_lakehouse_mcp/client/: __init__.py  fabric_client.py  query_timeout.py  sql_analytics_client.py  sql_endpoint_client.py
fabric_lakehouse_mcp/config/: settings.py
fabric_lakehouse_mcp/errors/: __init__.py  exceptions.py  handlers.py  logging_config.py  retry.py
fabric_lakehouse_mcp/models/: __init__.py  data_models.py  query_formatter.py
fabric_lakehouse_mcp/security/: __init__.py  audit_logger.py  query_analyzer.py  rate_limiter.py  sql_validator.py
fabric_lakehouse_mcp/tools/: __init__.py  mcp_tools.py
fabric_lakehouse_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
logs/: fabric_mcp_audit_20251018.jsonl  fabric_mcp_audit_20251019.jsonl  fabric_mcp_audit_20251020.jsonl
tests/: __init__.py  conftest.py  test_auth_manager.py  test_config.py  test_data_models.py  test_fabric_client.py  test_integration_e2e.py  test_mcp_tools.py  test_security_enhancements.py
